Fix horizontal scroll

--- a/common/common.scss
+++ b/common/common.scss
@@ -279,7 +279,7 @@ html {
   }
   .background-container {
     height: 0em;
-    width: 100vw;
+    width: 100%;
     background: black;
   }
   .background-overflow-container {
